@@ -10,6 +10,19 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
+
+	<pluginRepositories>
+    <pluginRepository>
+        <id>cobertura-it-maven-plugin-maven2-release</id>
+        <url>http://cobertura-it-maven-plugin.googlecode.com/svn/maven2/releases</url>
+        <snapshots>
+            <enabled>false</enabled>
+        </snapshots>
+        <releases>
+            <enabled>true</enabled>
+        </releases>
+    </pluginRepository>
+</pluginRepositories>
 	<dependencies>
 		<dependency>
 			<groupId>cglib</groupId>
@@ -180,38 +193,6 @@
 					</execution>
 				</executions>
 			</plugin>
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-surefire-plugin</artifactId> -->
-<!-- 				<version>2.10</version> -->
-<!-- 				<configuration> -->
-<!-- 					<testNGArtifactName>none:none</testNGArtifactName> -->
-<!-- 					<argLine>-XX:PermSize=256m ${argLine}</argLine> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
-<!-- 			<plugin> -->
-<!-- 		        <groupId>org.codehaus.mojo</groupId> -->
-<!-- 		        <artifactId>cobertura-maven-plugin</artifactId> -->
-<!-- 		        <version>2.6</version> -->
-<!-- 		        <configuration> -->
-<!-- 		          <instrumentation> -->
-<!-- 		            <ignores> -->
-<!-- 		              <ignore>com.example.boringcode.*</ignore> -->
-<!-- 		            </ignores> -->
-<!-- 		            <excludes> -->
-<!-- 		              <exclude>com/example/dullcode/**/*.class</exclude> -->
-<!-- 		              <exclude>com/example/**/*Test.class</exclude> -->
-<!-- 		            </excludes> -->
-<!-- 		          </instrumentation> -->
-<!-- 		        </configuration> -->
-<!-- 		        <executions> -->
-<!-- 		          <execution> -->
-<!-- 		            <goals> -->
-<!-- 		              <goal>clean</goal> -->
-<!-- 		            </goals> -->
-<!-- 		          </execution> -->
-<!-- 		        </executions> -->
-<!-- 		      </plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
@@ -231,10 +212,96 @@
 					<suppressionsLocation>${basedir}/tools/config/checkstyle-suppressions.xml</suppressionsLocation>
 				</configuration>
 			</plugin>
-<!-- 			<plugin> -->
+
+			<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.15</version>
+    <configuration>
+        <!-- Sets the VM argument line used when unit tests are run. -->
+        <argLine>${surefireArgLine}</argLine>
+        <!-- Skips unit tests if the value of skip.unit.tests property is true -->
+        <skipTests>${skip.unit.tests}</skipTests>
+        <!-- Excludes integration tests when unit tests are run. -->
+        <excludes>
+            <exclude>**/IT*.java</exclude>
+        </excludes>
+    </configuration>
+</plugin>
+
+			<plugin>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.6.3.201306030806</version>
+    <executions>
+        <!--
+            Prepares the property pointing to the JaCoCo runtime agent which
+            is passed as VM argument when Maven the Surefire plugin is executed.
+        -->
+        <execution>
+            <id>pre-unit-test</id>
+            <phase>clean</phase>
+            <goals>
+                <goal>prepare-agent</goal>
+            </goals>
+            <configuration>
+                <!-- Sets the path to the file which contains the execution data. -->
+                <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+                <!--
+                    Sets the name of the property containing the settings
+                    for JaCoCo runtime agent.
+                -->
+                <propertyName>surefireArgLine</propertyName>
+            </configuration>
+        </execution>
+        <!--
+            Ensures that the code coverage report for unit tests is created after
+            unit tests have been run.
+        -->
+        <execution>
+            <id>post-unit-test</id>
+            <phase>test</phase>
+            <goals>
+                <goal>report</goal>
+            </goals>
+            <configuration>
+                <!-- Sets the path to the file which contains the execution data. -->
+                <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+                <!-- Sets the output directory for the code coverage report. -->
+                <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
+
+
+<!-- 						<plugin> -->
 <!--         <groupId>org.codehaus.mojo</groupId> -->
 <!--         <artifactId>cobertura-maven-plugin</artifactId> -->
 <!--         <version>2.6</version> -->
+<!--         <configuration> -->
+<!--   			<format>xml</format> -->
+
+
+<!--         </configuration> -->
+<!--         <executions> -->
+<!--           <execution> -->
+
+<!--                     <phase>test</phase> -->
+<!--                     <goals> -->
+<!--                         <goal>cobertura</goal> -->
+<!--                         <goal>check</goal> -->
+<!--                     </goals> -->
+<!--                 </execution> -->
+
+<!--         </executions> -->
+<!--       </plugin> -->
+
+
+<!-- 			<plugin> -->
+<!--         <groupId>org.codehaus.mojo</groupId> -->
+<!--                 <artifactId>cobertura-it-maven-plugin</artifactId> -->
+<!--                 <version>2.5</version> -->
 <!--         <configuration> -->
 <!--   <format>xml</format> -->
 
@@ -248,6 +315,27 @@
 <!--                         <goal>check</goal> -->
 <!--                     </goals> -->
 <!--                 </execution> -->
+<!--                     <execution> -->
+<!--                         <id>cobertura-clean</id> -->
+<!--                         <phase>clean</phase> -->
+<!--                         <goals> -->
+<!--                             <goal>clean</goal> -->
+<!--                         </goals> -->
+<!--                     </execution> -->
+<!--                     <execution> -->
+<!--                         <id>cobertura-instrument</id> -->
+<!--                         <phase>process-classes</phase> -->
+<!--                         <goals> -->
+<!--                             <goal>instrument</goal> -->
+<!--                         </goals> -->
+<!--                     </execution> -->
+<!--                     <execution> -->
+<!--                         <id>cobertura-check-only</id> -->
+<!--                         <phase>verify</phase> -->
+<!--                         <goals> -->
+<!--                             <goal>check-only</goal> -->
+<!--                         </goals> -->
+<!--                     </execution> -->
 
 <!--         </executions> -->
 <!--       </plugin> -->
